--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" onclick="window.location.href='https://simona.life';">Blog</button>
+            <button class="navbar-link" onclick="window.location.href='https://blog.simona.life/';">Blog</button>
           </li>
 
 
@@ -186,14 +186,14 @@
           </p>
 
           <p>
-            做播客，相信女性的声音和讲述的力量；
+            - 做播客，相信女性的声音和讲述的力量；
           </p>
           <p>
-            日听播客三百集，运营一份付费Newsletter - The Pod Luck Club， 每天推荐一期我喜欢的播客，每周一封播客观察长文；
+            - 日听播客三百集，运营一份付费Newsletter - The Pod Luck Club， 每天推荐一期我喜欢的播客，每周一封播客观察长文；
           </p><p>
-            和朋友们一起运营海外华人女性社区 - 她乡，我们希望和更多女性/non-binary一起看到更广阔的世界，成为更好的自己；
+            - 和朋友们一起运营海外华人女性社区 - 她乡，我们希望和更多女性/non-binary一起看到更广阔的世界，成为更好的自己；
           </p> <p>
-              提供播客制作coaching服务，从技术问题到采访技巧，都是我热爱的话题；
+            - 提供播客制作coaching服务，从技术问题到采访技巧，都是我热爱的话题；
             
             </p>
           
