change profile picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/simona.png" alt="Richard hanrick" width="80">
+          <img class="circular--square" src="./assets/images/douban.jpg" alt="Profile Picture" width="80">
         </figure>
 
         <div class="info-content">
