--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                
                 
                 <p class="service-item-text">
-                  【优质播客推荐计划】 日听播客三百集，每天推荐一期我喜欢的播客，每周一封播客观察长文
+                  【Newsletter】 优质播客推荐计划。日听播客三百集，每天推荐一期我喜欢的播客，每周一封播客观察长文
                 </p>
               </div>
 
