update text color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">穿堂风_Simona</h1>
+          <h1 class="name" title="Simona">穿堂风_Simona</h1>
 
           <p class="title">Podcaster / Digital Nomad</p>
         </div>
@@ -105,7 +105,7 @@
             <img src="./assets/images/telegram.png" alt="Telegram" width="20">
            </a>
            <a target="_blank" href="https://m.cmx.im/@bluegrass" >
-            <img src="./assets/images/mastodon.svg" alt="Mastodon" width="20">
+            <img src="./assets/images/mastodon.png" alt="Mastodon" width="20">
            </a>
            <a target="_blank" href="https://www.xiaohongshu.com/user/profile/5fc5b484000000000100bcad" >
             <img src="./assets/images/xiaohongshu.png" alt="小红书" width="20">
