added social media buttons

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
            <a target="_blank" href="https://www.xiaohongshu.com/user/profile/5fc5b484000000000100bcad" >
             <img src="./assets/images/xiaohongshu.png" alt="小红书" width="20">
            </a>
+           <a target="_blank" href="https://www.youtube.com/channel/UCHh3PxWb7aIQr9aUo1pEgJA" >
+            <img src="./assets/images/youtube.svg" alt="Youtube" width="20">
+           </a>
+           <a href="mailto:hey.simonalife@gmail.com" class="contact-link">
+            <img src="./assets/images/email.png" alt="Email" width="20">
+           </a>
 
 
 
