--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">sàgó散讲</h4>
-                <button class="fcc-button" onclick="window.location.href='https://blog.simona.life/feed/audio.xml';">收听</button>
+                <button class="fcc-button" onclick="window.location.href='https://blog.simona.life/episodes/';">收听</button>
                
 
                 <p class="service-item-text">
