--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="contact-info">
               <p class="contact-title">Current Location</p>
 
-              <address>Singapore</address>
+              <address>China</address>
             </div>
 
           </li>
