--- a/index.html
+++ b/index.html
@@ -321,6 +321,24 @@
 
             </li>
 
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/sql tutor logo.png" alt="camera icon" width="50">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">SQL/Data Engineer Tutor</h4>
+             
+                <button class="fcc-button" onclick="window.location.href='https://www.buymeacoffee.com/simonana/e/123270';">预约</button>
+               
+                <p class="service-item-text">
+                  【Coaching Session】前科技大厂Data Engineer，文科自学转行。SQL Monkey本性难移，决定下海教人写SQL。包括教写SQL题，SQL query optimization等。服务范围也可以是关于Data Engineer的面试/工作内容等的咨询。
+                </p>
+              </div>
+
+            </li>
+
           </ul>
 
         </section>
