--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" target="_blank" onclick="window.location.href='https://simona.life/feed/audio.xml';">sàgó散讲</button>
+            <button class="navbar-link" target="_blank" onclick="window.location.href='https://blog.simona.life/feed/audio.xml';">sàgó散讲</button>
           </li>
 
           <li class="navbar-item">
