update self intro

--- a/index.html
+++ b/index.html
@@ -188,10 +188,13 @@
 
         <section class="about-text">
           <p>
-            很开心遇见你！我是穿堂风，也是Simona。曾经的互联网数据打工人，2022年11月被Facebook裁员后，开启数字游民生活。  
+            很开心遇见你！我是穿堂风。曾经的互联网数据打工人，2022年11月被Facebook裁员后，开启数字游民生活。  
           </p>
           <p>
-            虽然是社恐，但很想要和你聊天。欢迎发邮件给我约时间，线上线下都可以。
+            女权主义者；关注性别议题，和好友共创WomenOverseas她乡社区；播客「噢！妈妈」主理人，讲述属于中国女性的最真实的故事；
+          </p>
+          <p>
+            欢迎在网站留言，或者预约我提供的服务。如果你有好玩的活动和项目，也欢迎你给我写邮件。
           </p>
           <p>
             生活会带我去向哪里？我很期待！
