--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="contact-info">
               <p class="contact-title">Current Location</p>
 
-              <address>China</address>
+              <address>Dubai, UAE</address>
             </div>
 
           </li>
