--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
             很开心遇见你！我是穿堂风。曾经的互联网数据打工人，2022年11月被Facebook裁员后，开启数字游民生活。  
           </p>
           <p>
-            女权主义者；关注性别议题，和好友共创WomenOverseas她乡社区；播客「噢！妈妈」主理人，讲述属于中国女性的最真实的故事；
+            女权主义者；关注性别议题，和好友共创WomenOverseas她乡社区；播客「噢！妈妈」主播，讲述属于中国女性的最真实的故事；
           </p>
           <p>
             欢迎在网站留言，或者预约我提供的服务。如果你有好玩的活动和项目，也欢迎你给我写邮件。
           </p>
           <p>
-            生活会带我去向哪里？我很期待！
+            2023年旅行轨迹。Singapore -> 中国 -> Vietnam -> Singapore -> Uzbekistan -> UAE -> Turkey -> Serbia -> Bosnia and Herzegovina -> Montenegro -> Morroco -> more...
           </p>
 
           
